Fixes from wborn review
Signed-off-by: Ben Rosenblum <rosenblumb@gmail.com>